--- a/assets/css/Body.css
+++ b/assets/css/Body.css
@@ -1,7 +1,6 @@
 .imagem-principal {
     width: 100vw;
-    height: 40vh;
-    overflow: hidden;
+    height: 80vh;
 }
 
 .imagem-principal img {
@@ -10,4 +9,13 @@
     object-fit: cover;
     object-position: center;
     display: block;
+}
+
+.botoes-principais {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    gap: 10px;
 }
