--- a/assets/css/Body.css
+++ b/assets/css/Body.css
@@ -1,6 +1,17 @@
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
 .imagem-principal {
     width: 100vw;
-    height: 80vh;
+    height: 40vh;
 }
 
 .imagem-principal img {
@@ -11,11 +22,34 @@
     display: block;
 }
 
-.botoes-principais {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    gap: 10px;
+.texto-usuario {
+    text-transform: uppercase;
+    font-family: monospace;
+    font-size: 20px;
+    font-weight: bolder;
+    text-align: center;
+    color: #847e7e; 
 }
+
+.botoes-principal {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 24px;
+
+}
+
+.botoes-principal .btn {
+    text-decoration: none;
+    text-transform: uppercase;
+    background-color: #6495ED;
+    padding: 4px 6px;
+    border-radius: 2px;
+    font-family: monospace;
+    font-size: 20px;
+}
+
+.texto-principal {
+    margin: 12% 0px;
+}
+
