--- a/assets/css/Comun.css
+++ b/assets/css/Comun.css
@@ -9,3 +9,44 @@
     max-width: 36px;
     max-height: 36px;
 }
+
+.form_login {
+    display: flex;
+    flex-direction: column;
+}
+
+.lab_login {
+    text-transform: uppercase;
+    font-family: monospace;
+}
+
+.input_login {
+    border: 2px solid #000;
+    height: 28px;
+}
+
+.form_login input[type="submit"] {
+    margin-top: 8px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 8px 0px;
+    border: 2px solid #4682B4;
+    color: #fff;
+    background-color: #6495ED;
+    border-radius: 2px;
+    box-shadow: 0px 0px 2px 2px #a8a8a8;
+}
+
+.icone-login {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icone-login > img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 246px;
+}
+
