--- a/assets/css/Comun.css
+++ b/assets/css/Comun.css
@@ -47,6 +47,23 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 246px;
+    width: 84px;
 }
 
+.flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#loom-companion-mv3 {
+    display: none;
+}
+
+.d-flex {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
