--- a/assets/css/Login.css
+++ b/assets/css/Login.css
@@ -1,6 +1,13 @@
+body, .container {
+    height: 100vh;
+}
+
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    margin-top: 24%;
+    justify-content: space-between;
+}
+
+.container form {
+    padding-bottom: 124px;
 }
