--- a/assets/css/Comun.css
+++ b/assets/css/Comun.css
@@ -3,6 +3,7 @@
     max-width: 430px;
     margin: 0 auto;
     padding: 16px;
+    overflow: hidden;
 }
 
 .icone-header {
@@ -25,11 +26,12 @@
     height: 28px;
 }
 
-.form_login input[type="submit"] {
+.botao {
     margin-top: 8px;
     font-weight: bold;
     text-transform: uppercase;
-    padding: 8px 0px;
+    text-decoration: none;
+    padding: 8px 4px;
     border: 2px solid #4682B4;
     color: #fff;
     background-color: #6495ED;
